Refine cofre reveal and mission illustrations

--- a/cofre.html
+++ b/cofre.html
@@ -61,7 +61,7 @@
                 </button>
                 <div class="lock-explanation">
                     <p>Por trás do cadeado existem chaves digitais criadas por criptografia. Elas funcionam como senhas gigantes, muito maiores que qualquer senha humana conseguiria decorar.</p>
-                    <div id="cofreSecrets" class="hidden-panel" hidden>
+                    <div id="cofreSecrets" class="hidden-panel" hidden aria-hidden="true">
                         <p class="panel-highlight">🎯 <strong>Revelação:</strong> esse cofre digital protege automaticamente:</p>
                         <ul>
                             <li>📸 Fotos e vídeos que contam quem você é.</li>
