--- a/https.html
+++ b/https.html
@@ -82,7 +82,7 @@
                         <circle cx="52" cy="42" r="4"></circle>
                     </g>
                     <text x="96" y="48" class="address-text">https://seusite.com</text>
-                    <text x="324" y="48" class="status-text">Conexão segura</text>
+                    <text x="388" y="48" class="status-text" text-anchor="end">Conexão segura</text>
                 </svg>
                 <p>Use o cadeado + o <code>https</code> como checklist rápido antes de colocar dados sensíveis em um site.</p>
             </div>
