Align asymmetric flow cards side by side

--- a/criptografia-assimetrica.html
+++ b/criptografia-assimetrica.html
@@ -54,27 +54,29 @@
             <div class="mission-content asymmetric">
                 <figure id="asymmetricIllustration" class="asymmetric-visual" role="group" aria-labelledby="fluxoAssimetricoTitulo" aria-describedby="fluxoAssimetricoDescricao">
                     <h2 id="fluxoAssimetricoTitulo" class="sr-only">Como a criptografia assimétrica protege suas mensagens</h2>
-                    <div class="asymmetric-lane">
-                        <div class="visual-node">
+                    <div class="asymmetric-lane" role="list">
+                        <div class="visual-node" role="listitem">
                             <span class="visual-icon" aria-hidden="true">🤝</span>
                             <strong>Contato</strong>
                             <p>Usa sua chave pública</p>
                         </div>
-                        <div class="visual-arrow" aria-hidden="true">
-                            <span class="arrow-line"></span>
-                            <span class="arrow-icon">🔒</span>
+                        <div class="visual-connector" aria-hidden="true">
+                            <span class="connector-line">
+                                <span class="connector-icon">🔒</span>
+                            </span>
                         </div>
-                        <div class="visual-node visual-node--message">
+                        <div class="visual-node visual-node--message" role="listitem">
                             <span class="visual-icon" aria-hidden="true">📦</span>
                             <strong>Mensagem</strong>
                             <code aria-label="Mensagem cifrada">010101</code>
                             <p>Viaja trancada</p>
                         </div>
-                        <div class="visual-arrow" aria-hidden="true">
-                            <span class="arrow-line"></span>
-                            <span class="arrow-icon">🔑</span>
+                        <div class="visual-connector" aria-hidden="true">
+                            <span class="connector-line">
+                                <span class="connector-icon">🔑</span>
+                            </span>
                         </div>
-                        <div class="visual-node">
+                        <div class="visual-node" role="listitem">
                             <span class="visual-icon" aria-hidden="true">👩‍💻</span>
                             <strong>Você</strong>
                             <p>Abre com a chave privada</p>
