--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <a data-page="home" href="index.html">Início</a>
         <a data-page="cofre" href="cofre.html">Cofre Invisível</a>
         <a data-page="linguagem" href="linguagem.html">Linguagem Secreta</a>
-        <a data-page="assimetrica" href="criptografia-assimetrica.html">Criptografia Assimétrica</a>
+        <a data-page="ponta" href="criptografia-ponta-a-ponta.html">Criptografia ponta a ponta</a>
         <a data-page="https" href="https.html">HTTPS x HTTP</a>
         <a data-page="vpn" href="vpn.html">Túnel VPN</a>
         <a data-page="guardiao" href="guardiao.html">Guardião Digital</a>
@@ -74,11 +74,11 @@
                     <p>Transforme uma mensagem comum em código embaralhado com um clique.</p>
                     <a class="card-link" href="linguagem.html">Ver missão</a>
                 </li>
-                <li class="mission-card" data-mission="assimetrica">
+                <li class="mission-card" data-mission="ponta">
                     <div class="mission-icon" aria-hidden="true">🔑</div>
-                    <h3>Criptografia Assimétrica</h3>
-                    <p>Visualize o time público/privado que garante trocas seguras.</p>
-                    <a class="card-link" href="criptografia-assimetrica.html">Ver missão</a>
+                    <h3>Criptografia ponta a ponta</h3>
+                    <p>Veja como o WhatsApp mantém mensagens fechadas do início ao fim.</p>
+                    <a class="card-link" href="criptografia-ponta-a-ponta.html">Ver missão</a>
                 </li>
                 <li class="mission-card" data-mission="https">
                     <div class="mission-icon" aria-hidden="true">🌐</div>
