--- a/linguagem.html
+++ b/linguagem.html
@@ -35,7 +35,7 @@
         <a data-page="home" href="index.html">Início</a>
         <a data-page="cofre" href="cofre.html">Cofre Invisível</a>
         <a data-page="linguagem" href="linguagem.html">Linguagem Secreta</a>
-        <a data-page="assimetrica" href="criptografia-assimetrica.html">Criptografia Assimétrica</a>
+        <a data-page="ponta" href="criptografia-ponta-a-ponta.html">Criptografia ponta a ponta</a>
         <a data-page="https" href="https.html">HTTPS x HTTP</a>
         <a data-page="vpn" href="vpn.html">Túnel VPN</a>
         <a data-page="guardiao" href="guardiao.html">Guardião Digital</a>
@@ -75,7 +75,7 @@
 
         <nav class="mission-pagination" aria-label="Navegação entre missões">
             <a class="nav-link" href="cofre.html">← Missão anterior</a>
-            <a class="nav-link next" href="criptografia-assimetrica.html">Próxima missão →</a>
+            <a class="nav-link next" href="criptografia-ponta-a-ponta.html">Próxima missão →</a>
         </nav>
     </main>
 
